--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v5
         with:
+          python-version: "3.13"
           cache: "pip"
           cache-dependency-path: docs/requirements.txt
 
