--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,7 @@
 ---
-name: Test build examples workflow
+name: Test workflows
+# this workflow tests all the reusable workflows.
+
 on:
   push:
   pull_request:
@@ -8,19 +10,29 @@ on:
       - reopened
       - synchronize
 
+permissions:
+  # permissions required by build-docs.yml
+  pages: write
+  # permissions required by build-docs.yml
+  id-token: write
+
 jobs:
-  build:
+  build-examples:
     uses: ./.github/workflows/build-examples.yml
+
   build-docs:
     uses: ./.github/workflows/build-docs.yml
+
+  build-docs-and-publish:
+    uses: ./.github/workflows/build-docs.yml
     with:
-      upload: true
-  verify-upload:
+      publish: true
+  verify-build-docs-and-publish:
     runs-on: ubuntu-latest
-    needs: build-docs
+    needs: build-docs-and-publish
     steps:
-      - name: Fail if artifact-id is not defined
-        if: ${{ ! needs.build-docs.outputs.artifact-id }}
+      - name: Fail if page_url is not defined
+        if: ${{ ! needs.build-docs-and-publish.outputs.page_url }}
         run: |
-          echo "::error title=Failed to upload::Requested build-docs.yml to upload HTML files, but artifact-id is not defined
+          echo "::error title=Failed to publish::Requested build-docs.yml to build and publish HTML files, but page_url is not defined"
           exit 1
