--- a/.github/workflows/build-docs-test.yml
+++ b/.github/workflows/build-docs-test.yml
@@ -1,9 +1,6 @@
 ---
-name: Test workflows
-# this workflow tests all the reusable workflows.
-
+name: Test build-examples.yml
 on:
-  push:
   pull_request:
     types:
       - opened
@@ -17,9 +14,6 @@ permissions:
   id-token: write
 
 jobs:
-  build-examples:
-    uses: ./.github/workflows/build-examples.yml
-
   build-docs:
     uses: ./.github/workflows/build-docs.yml
 
@@ -27,6 +21,7 @@ jobs:
     uses: ./.github/workflows/build-docs.yml
     with:
       publish: true
+
   verify-build-docs-and-publish:
     runs-on: ubuntu-latest
     needs: build-docs-and-publish
