bugfix: add targets to idf_component.yml

--- a/idf_component.yml
+++ b/idf_component.yml
@@ -3,3 +3,6 @@ version: 1.0.0
 description: "This is a component for testing"
 url: https://github.com/esp-idf-lib/shared-workflows
 license: "MIT"
+targets:
+  - esp32
+  - esp32p4
