--- a/.github/workflows/validate-component.yml
+++ b/.github/workflows/validate-component.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: repo
+          submodules: recursive
 
       - name: Validte the repo
         run: |
