--- a/.github/workflows/validate-with-esp-component-registry.yml
+++ b/.github/workflows/validate-with-esp-component-registry.yml
@@ -33,6 +33,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Validate the component with ESP Component Registry
         uses: espressif/upload-components-ci-action@v2
