bugfix: workflow immediately fails when a command has failed

--- a/.github/workflows/validate-astyle.yml
+++ b/.github/workflows/validate-astyle.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Validte sources with astyle
         run: |
           astyle --project --recursive '*.c,*.h'
-          git diff --exit-code
-          if [ $? -ne 0 ]; then
-            echo "::error title=Style Error::The code does not follow our code style. Run\nastyle --project --recursive '*.c,*.h'\nto format the code"
+          if git diff --exit-code; then
+            echo "No difference"
+          else
+            echo "::error title=Style Error::The code does not follow our code style. Run: astyle --project --recursive '*.c,*.h' to format the code"
             exit 1
           fi
