--- a/.eil.yml
+++ b/.eil.yml
@@ -6,6 +6,12 @@ targets:
   - esp32
   - esp32p4
   - esp8266
+groups:
+  - common
+depends:
+  - freertos
+thread_safe: n/a
+license: ISC
 copyrights:
   - name: trombik
     year: 2025
