upload doxygen files as artifact for debug

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -81,6 +81,12 @@ jobs:
           echo "sphinx version:  `sphinx-build --version`"
           make -C docs all
 
+      - name: Upload doxygen files as artifact for debug
+        if: ${{ inputs.publish }}
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/_docs/xml
+
       - name: Upload HTML files as artifact
         if: ${{ inputs.publish }}
         uses: actions/upload-pages-artifact@v3
