--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -85,10 +85,14 @@ jobs:
           doxyfile-path: ./doxygen.conf
 
       - name: Build the docs
+        # XXX using sudo is required because the previouse step, "Run doxygen"
+        # runs as a different user. During the `make` execution, generated XML
+        # file must be fixed before sphinx-build, using `sed`, resulting
+        # "permission denied".
         run: |
           echo "breathe version: `breathe-apidoc --version`"
           echo "sphinx version:  `sphinx-build --version`"
-          make -C docs all
+          sudo make -C docs all
 
       - name: Upload HTML files as artifact
         if: ${{ inputs.publish }}
